Add preprint category, add pinned collaboration notice in news

--- a/_news/2026-01-16-welcome.md
+++ b/_news/2026-01-16-welcome.md
@@ -1,7 +1,7 @@
 ---
-title: "Welcome to my homepage!"
+title: "Website launched!"
 collection: news
 date: 2026-01-16
 ---
 
-This is an example news entry. You can add more news by creating new files in the `_news` folder.
+My personal academic homepage is now online!
